// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ImageCard renders card without overlay 1`] = `
.c0 {
  position: relative;
  overflow: hidden;
  background-color: rgba(255,255,255,1);
  border-radius: 4px;
  box-shadow: 0 4px 4px 0 rgba(0,0,0,0.08),0 0 4px 0 rgba(0,0,0,0.16);
}

.c2 {
  width: 100%;
  max-width: 100%;
}

.c3 {
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  position: relative;
}

<div
  className="container-block c0"
>
  <div
    className="c1"
  >
    <img
      alt=""
      className="c2"
      src="http://localhost/img.png"
      title=""
    />
    <div
      className="c3"
    />
  </div>
</div>
`;

exports[`ImageCard renders standard card 1`] = `
.c0 {
  position: relative;
  overflow: hidden;
  background-color: rgba(255,255,255,1);
  border-radius: 4px;
  box-shadow: 0 4px 4px 0 rgba(0,0,0,0.08),0 0 4px 0 rgba(0,0,0,0.16);
}

.c2 {
  width: 100%;
  max-width: 100%;
}

.c3 {
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  position: relative;
}

<div
  className="container-block c0"
>
  <div
    className="c1"
  >
    <img
      alt="image"
      className="c2"
      src="http://localhost/img.png"
      title="image"
    />
    <div
      className="c3"
    />
  </div>
</div>
`;

exports[`ImageCard renders type = half 1`] = `
.c5 {
  font-size: 14px;
  font-weight: 400;
  line-height: 1.5;
  text-transform: none;
  color: rgba(38,38,38,1);
}

.c2 {
  width: 100%;
  max-width: 100%;
}

.c3 {
  position: relative;
  color: rgba(255,255,255,1);
  background-color: none;
  border-radius: 4px;
  padding: 4px 8px;
  margin-left: 8px;
  margin-bottom: 8px;
  font-style: normal;
  font-stretch: normal;
  line-height: normal;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
}

.c1 {
  position: relative;
  overflow: hidden;
  background-color: rgba(255,255,255,1);
  border-radius: 4px;
  box-shadow: 0 4px 4px 0 rgba(0,0,0,0.08),0 0 4px 0 rgba(0,0,0,0.16);
  width: 50%;
}

.c4 {
  display: block;
  width: 100%;
  font-size: 16px;
  font-weight: 600;
}

.c4 > .image-card__title--half > span {
  font-size: 14px;
  color: rgba(2,108,223,1);
}

.c6 {
  font-size: 14px;
  font-weight: 400;
}

.c6 > .image-card__subtitle--half > span {
  color: #1F262D;
  -webkit-letter-spacing: "normal";
  -moz-letter-spacing: "normal";
  -ms-letter-spacing: "normal";
  letter-spacing: "normal";
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  position: relative;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

@media screen and (min-width:768px) {
  .c5 {
    font-size: 14px;
  }
}

@media screen and (min-width:1024px) {
  .c5 {
    font-size: 14px;
  }
}

<div
  className="c0"
>
  <div
    className="container-block c1"
    width="50%"
  >
    <img
      alt=""
      className="c2"
      src="http://localhost/img.png"
      title=""
    />
  </div>
  <div
    className="c3"
  >
    <span
      className="c4"
    >
      <div
        className="text text--dark text--primary image-card__title--half c5"
        disabled={false}
        size={
          Object {
            "large": "hecto",
            "medium": "hecto",
            "small": "hecto",
          }
        }
      >
        <span
          className="c4"
        >
          Title
        </span>
      </div>
    </span>
    <span
      className="c6"
    >
      <div
        className="text text--dark text--primary image-card__subtitle--half c5"
        disabled={false}
        size={
          Object {
            "large": "hecto",
            "medium": "hecto",
            "small": "hecto",
          }
        }
      >
        <span
          className="c6"
        >
          Sub Title
        </span>
      </div>
    </span>
  </div>
</div>
`;

exports[`ImageCard renders with custom image 1`] = `
.c0 {
  position: relative;
  overflow: hidden;
  background-color: rgba(255,255,255,1);
  border-radius: 4px;
  box-shadow: 0 4px 4px 0 rgba(0,0,0,0.08),0 0 4px 0 rgba(0,0,0,0.16);
}

.c2 {
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
}

.c3 {
  position: relative;
  color: rgba(255,255,255,1);
  background-color: rgba(31,38,45,0.8);
  border-radius: 4px;
  padding: 4px 8px;
  margin-left: 8px;
  margin-bottom: 8px;
  font-style: inherit;
  font-stretch: inherit;
  line-height: inherit;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
}

.c4 {
  display: block;
  width: 100%;
  font-size: 16px;
  font-weight: 600;
}

.c4 > .image-card__title--half > span {
  font-size: 14px;
  color: rgba(2,108,223,1);
}

.c5 {
  font-size: 14px;
  font-weight: 400;
}

.c5 > .image-card__subtitle--half > span {
  color: #1F262D;
  -webkit-letter-spacing: "normal";
  -moz-letter-spacing: "normal";
  -ms-letter-spacing: "normal";
  letter-spacing: "normal";
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  position: relative;
}

<div
  className="container-block c0"
>
  <div
    className="c1"
  >
    <svg />
    <div
      className="c2"
    >
      <div
        className="c3"
      >
        <span
          className="c4"
        >
          Title
        </span>
        <span
          className="c5"
        >
          Sub Title
        </span>
      </div>
    </div>
  </div>
  <div>
    <div>
      Extra content
    </div>
  </div>
</div>
`;

exports[`ImageCard renders with title & subtitle 1`] = `
.c0 {
  position: relative;
  overflow: hidden;
  background-color: rgba(255,255,255,1);
  border-radius: 4px;
  box-shadow: 0 4px 4px 0 rgba(0,0,0,0.08),0 0 4px 0 rgba(0,0,0,0.16);
}

.c2 {
  width: 100%;
  max-width: 100%;
}

.c3 {
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
}

.c4 {
  position: relative;
  color: rgba(255,255,255,1);
  background-color: rgba(31,38,45,0.8);
  border-radius: 4px;
  padding: 4px 8px;
  margin-left: 8px;
  margin-bottom: 8px;
  font-style: inherit;
  font-stretch: inherit;
  line-height: inherit;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
}

.c5 {
  display: block;
  width: 100%;
  font-size: 16px;
  font-weight: 600;
}

.c5 > .image-card__title--half > span {
  font-size: 14px;
  color: rgba(2,108,223,1);
}

.c6 {
  font-size: 14px;
  font-weight: 400;
}

.c6 > .image-card__subtitle--half > span {
  color: #1F262D;
  -webkit-letter-spacing: "normal";
  -moz-letter-spacing: "normal";
  -ms-letter-spacing: "normal";
  letter-spacing: "normal";
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  position: relative;
}

<div
  className="container-block c0"
>
  <div
    className="c1"
  >
    <img
      alt=""
      className="c2"
      src="http://localhost/img.png"
      title=""
    />
    <div
      className="c3"
    >
      <div
        className="c4"
      >
        <span
          className="c5"
        >
          Title
        </span>
        <span
          className="c6"
        >
          Sub Title
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`ImageCard renders with title & subtitle, extra content 1`] = `
.c0 {
  position: relative;
  overflow: hidden;
  background-color: rgba(255,255,255,1);
  border-radius: 4px;
  box-shadow: 0 4px 4px 0 rgba(0,0,0,0.08),0 0 4px 0 rgba(0,0,0,0.16);
}

.c2 {
  width: 100%;
  max-width: 100%;
}

.c3 {
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
}

.c4 {
  position: relative;
  color: rgba(255,255,255,1);
  background-color: rgba(31,38,45,0.8);
  border-radius: 4px;
  padding: 4px 8px;
  margin-left: 8px;
  margin-bottom: 8px;
  font-style: inherit;
  font-stretch: inherit;
  line-height: inherit;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
}

.c5 {
  display: block;
  width: 100%;
  font-size: 16px;
  font-weight: 600;
}

.c5 > .image-card__title--half > span {
  font-size: 14px;
  color: rgba(2,108,223,1);
}

.c6 {
  font-size: 14px;
  font-weight: 400;
}

.c6 > .image-card__subtitle--half > span {
  color: #1F262D;
  -webkit-letter-spacing: "normal";
  -moz-letter-spacing: "normal";
  -ms-letter-spacing: "normal";
  letter-spacing: "normal";
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  position: relative;
}

<div
  className="container-block c0"
>
  <div
    className="c1"
  >
    <img
      alt=""
      className="c2"
      src="http://localhost/img.png"
      title=""
    />
    <div
      className="c3"
    >
      <div
        className="c4"
      >
        <span
          className="c5"
        >
          Title
        </span>
        <span
          className="c6"
        >
          Sub Title
        </span>
      </div>
    </div>
  </div>
  <div>
    <div>
      Extra content
    </div>
  </div>
</div>
`;
